--- a/viz_links.Rmd
+++ b/viz_links.Rmd
@@ -7,7 +7,7 @@ runtime: shiny
 ***
 For a more detailed guidance on data visualization and design principles please use the material
 
-
-* ["ODM Module 21 - Data Visualization and Design Principles"](https://unhcr.csod.com/client/unhcr/default.aspx) on UNHCR Learn & Connect
-* [General Infographics Know-How](http://data.unhcr.org/imtoolkit/chapters/view/info-graphics/lang:eng) in the UNHCR IM Toolkit
-* [Training Material on Visualizations](file/learning_files/viz_general/Heer-EffectiveDataVisualization.pdf) of the UNHCR TIME Training (Training on Information Management in Emergencies)
+* <a href="http://data.unhcr.org/imtoolkit/" target=blank>UNNHCR IM Toolkit</a>
+* <a href="file://analysis_toolkit/data/test.pdf" target=blank>ODM Module 21 - Data Visualization and Design Principles</a>
+* <a href="http://data.unhcr.org/imtoolkit/chapters/view/info-graphics/lang:eng" target=blank>General Infographics Know-How</a>
+* <a href="file/learning_files/viz_general/Heer-EffectiveDataVisualization.pdf" target=blank>Training Material on Visualizations</a>
