--- a/viz_links.Rmd
+++ b/viz_links.Rmd
@@ -7,7 +7,7 @@ runtime: shiny
 ***
 For a more detailed guidance on data visualization and design principles please use the material
 
-* <a href="http://data.unhcr.org/imtoolkit/" target=blank>UNNHCR IM Toolkit</a>
+* <a href="http://data.unhcr.org/imtoolkit/" target=blank>UNHCR IM Toolkit</a>
 * <a href="file://analysis_toolkit/data/test.pdf" target=blank>ODM Module 21 - Data Visualization and Design Principles</a>
 * <a href="http://data.unhcr.org/imtoolkit/chapters/view/info-graphics/lang:eng" target=blank>General Infographics Know-How</a>
 * <a href="file/learning_files/viz_general/Heer-EffectiveDataVisualization.pdf" target=blank>Training Material on Visualizations</a>
